--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,10 @@
-body *{
+body{
 	letter-spacing: 1px;
+	font-family: Saira;
+	overflow-x: hidden;
+}
+h1, h2, h3, h4{
+	font-weight: bold;
 }
 .navbar .navbar-nav {
   display: inline-block;
@@ -109,7 +114,7 @@ body *{
 .stepper .round-tab {
   	width: 60px;
 	height: 60px;
-	line-height: 43px;
+	line-height: 47px;
 	display: inline-block;
 	background: #000;
 	border: 5px solid #37B1FE;
@@ -120,6 +125,7 @@ body *{
 	text-align: center;
 	font-size: 40px;
 	font-weight: bold;
+	cursor: pointer;
 }
 .stepper .completed .round-tab {
   background: #000;
@@ -220,6 +226,47 @@ div.radios-div{
 	border: 3px solid #37B1FE;
 }
 
+.bg-gray{
+	background-color: #F9F8F4;
+	padding: 50px 0;
+}
+
+.panel{
+	background-color: transparent;
+	border: none;
+	box-shadow: none;
+}
+
+.panel-title > a, .panel-title > a:hover{
+	text-decoration: none;
+}
+
 .footer{
 	padding: 50px 0;
+	text-transform: uppercase;
+}
+
+.panel-heading a:after {
+    font-family: 'Glyphicons Halflings';
+    content: "\e252";
+    float: right;
+}
+.panel-heading a.collapsed:after {
+    content: "\e250";
+}
+.panel-group .panel-heading + .panel-collapse > .list-group, 
+.panel-group .panel-heading + .panel-collapse > .panel-body {
+    border-top: none;
+}
+.form-group {
+	margin-bottom: 0;
+    margin-top: 25px;
+}
+
+.next-step, .prev-step{
+	background-color: #000;
+	color: #fff;
+	border: 3px solid #37B1FE;
+	border-radius: 0;
+	margin: 5px;
 }
